--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
   <!-- NAVBAR -->
     <nav>
-        <div class="container main-nav flex" >
-            <h2 id="prep">PrepGuide</h2> 
+        <div class="container main-nav " >
+            <!-- <h2 id="prep">PrepGuide</h2>  -->
             <div class="nav-links">
                 
                 <ul class="flex">
-                    <li><a href="#" class="hover-links">Home</a></li>
+                    <li><div>Home</div></li>
                     <li><a href="#" class="hover-links">Roadmaps</a></li>
                     <li><a href="#" class="hover-links">Internships</a></li>
                     <li><a href="#" class="hover-links primary-button">Profile</a></li>
@@ -29,15 +29,21 @@
     <header>
         <div class="container header-section flex">
             <div class="header-left" width="300" >
-                <h3 style="color:powderblue;">Hey there! 👋</h3>
-                <p style="font-size: 95% "  >Prepguide is a community effort to create roadmaps or guided path , internship opportunities and other
+                <p style="color:powderblue; font-size:1000%" id="head">PrepGuide</p>
+                <p style="font-size:140%" margin="0 0 0 0" id="head-text" align="center" >Prepguide is a community effort to create roadmaps or guided path , internship opportunities and other
                  educational content to help guide the student in picking 
                  up the path and guide their learnings.
                 </p>
 
+                <button id="login" style="background:#1ea688"  type="button">Login</button>
+
+                <p  id="h-3">Don't have an account ?</p>
+
+                <a href="#" id="sign">Sign Up</a>
+
             </div>
-            <div class="header-right">
-                <img src="./src/confuseguy.png" alt="student" width="100%" height="">
+            <div>
+                <img src="./src/new boy.png" alt="bg" id="gif">
             </div>
         </div>
     </header>
@@ -51,8 +57,24 @@
 
 
 
-    <div>
-        <img src="./src/bg.svg" alt="bg" width="100%">
+    <!-- <div >
+        <img src="./src/ani2.gif" alt="bg" width="80%" height="10%" id="gif" aling="right">
+    </div> -->
+    <div class="comtainer2">
+       <img id="bg2" src="./src/background2.png" alt="BG2" width="100%" height="1000">
+       <p id="head2" >Sprint From Start</p>
+       <p id="para">Providing you with the best roadmaps there are available on internet, for the fields you're in love with.
+       </p>
+       <button id="roadmap" style="background:#1ea688"  type="button">SEE CHECK POINT</button>
+
+    </div>
+
+    <div class = "container3">
+        <img id="bg3" src="./src/background3.png" alt="BG2" width="100%" height="1000">
+        <p id="head3" >Never Miss  An <br> Opportunity</p>
+        <p id="para2">Providing you with the best roadmaps there are available on internet, for the fields you're in love with.
+        </p>
+        <button id="internship" style="background:#1ea688"  type="button">SEE CHECK POINT</button>
     </div>
 
 </body>
