--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="nav-links">
                 
                 <ul class="flex">
-                    <li><div>Home</div></li>
+                    <li><div id="home">Home</div></li>
                     <li><a href="#" class="hover-links">Roadmaps</a></li>
                     <li><a href="#" class="hover-links">Internships</a></li>
-                    <li><a href="#" class="hover-links primary-button">Profile</a></li>
+                    <li><a href="#" class="hover-links primary-button" id="profile">Profile</a></li>
                 </ul>
             </div>
         </div>
@@ -74,7 +74,16 @@
         <p id="head3" >Never Miss  An <br> Opportunity</p>
         <p id="para2">Providing you with the best roadmaps there are available on internet, for the fields you're in love with.
         </p>
-        <button id="internship" style="background:#1ea688"  type="button">SEE CHECK POINT</button>
+        <button id="internship" style="background:#1ea688"  type="button">CHECK OPPORTUNITY</button>
+    </div>
+
+    <div class = "container4">
+        <img id="bg3" src="./src/backgroung4.png" alt="BG2" width="100%" height="1000">
+        <a href="http://www.linkedin.com/in/neel-prajapati-737707152"><img id="l1" src="./src/lakshman.png"></a>
+        <a href="http://www.linkedin.com/in/neel-prajapati-737707152"><img id="l2" src="./src/neel.png"></a>
+        <a href="http://www.linkedin.com/in/neel-prajapati-737707152"><img id="l3" src="./src/nikhil.png"></a>
+        <a href="http://www.linkedin.com/in/neel-prajapati-737707152"><img id="l4" src="./src/Ashish.png"></a>
+        <a href="http://www.linkedin.com/in/neel-prajapati-737707152"><img id="l5" src="./src/amit.png"></a>
     </div>
 
 </body>
